--- a/UserAuthSystem/public/index.html
+++ b/UserAuthSystem/public/index.html
@@ -16,37 +16,62 @@
 
     .authbox {
         display: flex;
-        flex-wrap: wrap;
         justify-content: space-around;
-        align-items: center;
-        gap: 20px;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
     }
 
-    .sign-in,
-    .sign-up {
-        height: fit-content;
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 10px 0;
+        height: 100%;
+    }
+
+    .signup,
+    .login {
+        width: 100%;
+        height: 100%;
+        padding: 0 20px;
+    }
+
+    input {
+        padding: 10px 8px;
+        margin: 0 auto;
+        outline: none;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+        width: 80%;
+        background-color: cornsilk;
+    }
+
+    input[type="submit"] {
         width: 40%;
-        border-radius: 2rem;
-        background-color: cornflowerblue;
-        padding: 5vw 0;
-        cursor: pointer;
-        font-size: xx-large;
-        color: white;
-        box-shadow: 15px 15px 25px rgb(163, 163, 163);
     }
 
-    .sign-in:active,
-    .sign-up:active {
-        scale: 0.95;
-        transition: all 300ms ease-in-out;
+    .signup input[type="submit"] {
+        background-color: green;
+    }
+
+    .login input[type="submit"] {
+        background-color: red;
     }
 </style>
 
 <body>
     <section class="authbox">
-        <button class="sign-up">Sign Up</button>
-        <button class="sign-in">Sign In</button>
+        <form action="/signup" class="signup" method="post">
+            <input type="text" name="username" placeholder="Enter your username" id="signup-username">
+            <input type="password" name="password" placeholder="Enter your Password" id="signup-password">
+            <input type="submit" value="Create Account">
+        </form>
+        <form action="/login" class="login" method="post">
+            <input type="text" name="username" placeholder="Enter your username" id="login-username">
+            <input type="password" name="password" placeholder="Enter your Password" id="login-password">
+            <input type="submit" value="Login">
+        </form>
     </section>
 </body>
 
