--- a/UserAuthSystem/public/index.html
+++ b/UserAuthSystem/public/index.html
@@ -16,6 +16,7 @@
 
     .title {
         text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
     .authbox {
@@ -53,7 +54,7 @@
     }
 
     input {
-        padding: 10px 8px;
+        padding: 20px 12px;
         margin: 0 auto;
         outline: none;
     }
@@ -66,6 +67,8 @@
 
     input[type="submit"] {
         width: 40%;
+        cursor: pointer;
+        color: white;
     }
 
     .signup input[type="submit"] {
